Alterar para remover o botão exportar - BASIS-191262.

--- a/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
+++ b/frontend/src/app/farmacia/farmacia/medicamentos/medicamentos.component.html
@@ -41,38 +41,39 @@
                     pButton
                     type="button"
                     label="Pesquisar"
-                    icon="ui-icon-search"
+                    g icon="ui-icon-search"
                     (click)="listar()"
                 ></button>
             </div>
             <div class="ui-g-2 ui-sm-12">
-                <button 
-                    pButton 
-                    type="button" 
+                <button
+                    pButton
+                    type="button"
                     routerLink="/cadastrar-medicamento"
                     label="Cadastrar">
                 </button>
             </div>
             <div class="ui-g-2 ui-sm-12">
-                <button 
-                    pButton type="button" 
+                <button
+                    pButton type="button"
                     label="Limpar"
                     (click)="limparPesquisa()">
                 </button>
             </div>
-            <div class="ui-g-2 ui-sm-12">
-                <button pButton type="button" label="Exportar"></button>
-            </div>
         </div>
-        <basis-datatable type="memory" 
-                [value]="medicamento" 
+        <div>
+
+
+        </div>
+        <basis-datatable type="memory"
+                [value]="medicamento"
                 sortField="brand"
                 [disableView]="true"
                 [disableEdit]="true"
                 [disableDelete]="true"
                 (buttonClick)="btnClick($event)"
                 #datatable>
-        
+
             <p-column header="Descrição" field="descricao" [sortable]="true"></p-column>
             <p-column header="Concentração" field="concentracao"></p-column>
             <p-column header="Unidade" field="unidade">
@@ -85,7 +86,7 @@
                         }}</span
                     >
                 </ng-template>
-            </p-column>        
+            </p-column>
             <p-column header="Apresentação" field="apresentacao">
                 <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
                     <span>
@@ -103,9 +104,9 @@
                 </ng-template>
             </p-column>
 
-            <basis-datatable-button 
+            <basis-datatable-button
                 name="edit"
-                icon="edit" 
+                icon="edit"
                 [disabled]="datatable.selectedRow == null"
                 class="ui-button-success">
             </basis-datatable-button>
@@ -118,16 +119,16 @@
                 name="view"
                 icon="remove-red-eye">
             </basis-datatable-button>
-            
+
             <basis-datatable-button
                 class="ui-button-danger"
                 [disabled]="datatable.selectedRow == null"
                 (buttonClick)="btnClick($event)"
                 name="delete"
                 icon="delete">
-            </basis-datatable-button>        
+            </basis-datatable-button>
         </basis-datatable>
-        
+
         <p-confirmDialog #dialog header="Confirmação" icon="pi pi-exclamation-triangle">
             <p-footer>
                 <button type="button" pButton icon="pi pi-times" label="Não" (click)="dialog.reject()"></button>
