--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -1,7 +1,7 @@
 
 <div class="card card-w-title">
     <h1>Pacientes</h1>
-        <nCrudList [form]="paciente">
+        <nCrudList [form]="paciente" [datatableParams]="datatableParams">
             <p-column header="Prontuário" field="prontuario"></p-column>
             <p-column header="Nome" field="nome"></p-column>
             <p-column header="Nome da Mãe" field="genitores">
