Adicionar para apagar leitos liberados de evento_leito - BASIS-161698

--- a/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario/dados-pessoais/paciente-form-dados-pessoais.component.html
@@ -33,6 +33,7 @@
             <span class="p-float-label">
                 <p-dropdown
                     (onChange)="aoSelecionarUF()"
+                    [disabled]="!formGroup.value.nacionalidadeId"
                     [options]="ufs"
                     optionLabel="sigla"
                     formControlName="uf"
