--- a/frontend/src/app/app.topbar.component.html
+++ b/frontend/src/app/app.topbar.component.html
@@ -1,20 +1,15 @@
 <div class="layout-topbar p-shadow-4">
-    <div class="layout-topbar-left">
-        <a class="layout-topbar-logo" routerLink="/">
-            <img id="app-logo" src="assets/layout/images/logo.jpg" alt="madre" style="height: 2.25rem">
+    <div class="layout-topbar-left">        
+        <a class="layout-menu-button" (click)="app.onMenuButtonClick($event)" pRipple>
+            <i class="fa fa-bars" aria-hidden="true"></i>
         </a>
 
-        <a class="layout-menu-button p-shadow-6" (click)="app.onMenuButtonClick($event)" pRipple>
-            <i class="pi pi-chevron-right"></i>
-        </a>
-
-        <a class="layout-topbar-mobile-button" (click)="app.onTopbarMobileButtonClick($event)" pRipple>
-            <i class="pi pi-ellipsis-v fs-large"></i>
-        </a>
     </div>
-
     <div class="layout-topbar-right" [ngClass]="{'layout-topbar-mobile-active': app.mobileTopbarActive}">
-        <div class="layout-topbar-actions-left"></div>
+        <div class="layout-topbar-actions-left">
+            <span routerLink="/" class="layout-topbar-logo" style="padding: 0 0 0 40px;" href="/">MADRE | SISTEMA DE GESTÃO HOSPITALAR</span>
+        </div>
+
         <div class="layout-topbar-actions-right">
             <ul class="layout-topbar-items">
                 <li class="layout-topbar-item">
