--- a/frontend/src/assets/layout/css/layout-dark.css
+++ b/frontend/src/assets/layout/css/layout-dark.css
@@ -178,15 +178,15 @@ p:last-child {
 }
 /* roboto-regular - latin-ext_latin */
 @font-face {
-  font-family: "Roboto";
+  font-family: Open Sans;
   font-style: normal;
   font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("../../layout/fonts/roboto-v20-latin-ext_latin-regular.woff2") format("woff2"), url("../../layout/fonts/roboto-v20-latin-ext_latin-regular.woff") format("woff");
+  src: local(Open Sans), local("Roboto-Regular"), url("../../layout/fonts/roboto-v20-latin-ext_latin-regular.woff2") format("woff2"), url("../../layout/fonts/roboto-v20-latin-ext_latin-regular.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-500 - latin-ext_latin */
 @font-face {
-  font-family: "Roboto";
+  font-family: Open Sans;
   font-style: normal;
   font-weight: 500;
   src: local("Roboto Medium"), local("Roboto-Medium"), url("../../layout/fonts/roboto-v20-latin-ext_latin-500.woff2") format("woff2"), url("../../layout/fonts/roboto-v20-latin-ext_latin-500.woff") format("woff");
@@ -194,7 +194,7 @@ p:last-child {
 }
 /* roboto-700 - latin-ext_latin */
 @font-face {
-  font-family: "Roboto";
+  font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
   src: local("Roboto Bold"), local("Roboto-Bold"), url("../../layout/fonts/roboto-v20-latin-ext_latin-700.woff2") format("woff2"), url("../../layout/fonts/roboto-v20-latin-ext_latin-700.woff") format("woff");
@@ -771,7 +771,7 @@ body .p-overlay-badge .p-badge {
   position: absolute;
   top: 50%;
   left: 15.75rem;
-  width: 2.5rem;
+  width: 100%;
   height: 2.5rem;
   margin-top: -1.25rem;
   display: flex;
