--- a/frontend/src/assets/theme/teal/theme-light.scss
+++ b/frontend/src/assets/theme/teal/theme-light.scss
@@ -1,6 +1,6 @@
-$primaryColor:#009688;
-$primaryLightestColor: #E0F2F1;
-$primaryMenuTextColor: $primaryColor;
+$primaryColor:#1FAAEE;
+$primaryLightestColor: #C3E6FF99;
+$primaryMenuTextColor: #02487B;
 $primaryTextColor:#ffffff;
 $accentColor:#96000f;
 $accentTextColor:#ffffff;
