--- a/frontend/src/app/app.topbar.component.html
+++ b/frontend/src/app/app.topbar.component.html
@@ -1,4 +1,8 @@
+
 <div class="layout-topbar">
+    <div class="layout-topbar-back ">
+        <hr class="line-header">
+    </div>
     <div class="layout-topbar-left">  <!--p-shadow-4 -->
         <div class="layout-topbar-left-items">
             <div routerLink="/" class="layout-topbar-actions-left">
@@ -44,8 +48,5 @@
                 </li>
             </ul>
         </div>
-    </div>
-</div>
-<div class="layout-topbar-underline">
-    <hr class="line-header">
+    </div> 
 </div>
