--- a/frontend/src/assets/layout/css/layout-light.css
+++ b/frontend/src/assets/layout/css/layout-light.css
@@ -2,9 +2,17 @@
   --divider-color:#E4E4E4;
   
 }
-.layout-topbar hr{
-  color: red;
-
+.line-header {
+  /* margin-top: 4rem; */
+  /* background: red; */
+  margin: 4rem 0 0 0;
+  width: 100%;
+  border: 5px;
+  position: absolute;
+  /* width: 24px; */
+  /* border: red; */
+  border: solid  #C30202;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
 /* Add your variable customizations of layout here */
 h1, h2, h3, h4, h5, h6 {
@@ -679,12 +687,6 @@ body .p-overlay-badge .p-badge {
   border: 1px solid #FFFFFF;
   box-shadow: 1px 1px 4px rgb(0 0 0 / 25%);
   transform: rotate(90deg);
-}
-.layout-topbar-logo-barra {
-  font-family: Open Sans;
-  margin: 20px;
-  font-size: 28.5px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
 .layout-topbar-logo-gestao {
   font-family: Open Sans;
