--- a/frontend/src/app/app.topbar.component.html
+++ b/frontend/src/app/app.topbar.component.html
@@ -1,6 +1,6 @@
 
 <div class="layout-topbar">
-    <div class="layout-topbar-back ">
+    <div class="layout-topbar-back">
         <hr class="line-header">
     </div>
     <div class="layout-topbar-left">  <!--p-shadow-4 -->
@@ -13,7 +13,7 @@
             <div class="logo">
                 <span class="layout-topbar-logo-madre">MADRE </span>
                 <!-- <span class="layout-topbar-logo-barra"> | </span> -->
-                <hr class="separador">
+                <hr class="barra">
                 <span class="layout-topbar-logo-gestao"> SISTEMA DE GESTÃO HOSPITALAR</span>
             </div>
         </div>          
