--- a/frontend/src/assets/layout/css/layout-light.css
+++ b/frontend/src/assets/layout/css/layout-light.css
@@ -678,11 +678,11 @@ body .p-overlay-badge .p-badge {
   margin: 10px;
   margin-right: 20px;
 }
-.separador {
+.barra {
   position: absolute;
   width: 24px;
   /* height: 1px; */
-  left: 198px;
+  left: 194px;
   top: 15px;
   border: 1px solid #FFFFFF;
   box-shadow: 1px 1px 4px rgb(0 0 0 / 25%);
@@ -1609,7 +1609,7 @@ body .p-overlay-badge .p-badge {
   color: #ffffff;
   background: linear-gradient(180deg, #0272C3 0%, #0267B0 100%);
   width: 1920px;
-  
+  box-shadow: 0px 0px 20px rgb(0 0 0);
 }
 .layout-topbar-teal .layout-topbar a {
   color: #ffffff;
@@ -4300,7 +4300,9 @@ body a {
 .layout-footer {
   background: #C3CBD9;
 }
-
+.footer-text-left {
+  padding: 0 20%;
+}
 .layout-config {
   transition: transform 0.2s;
 }
