--- a/frontend/src/assets/theme/teal/theme-light.css
+++ b/frontend/src/assets/theme/teal/theme-light.css
@@ -1930,9 +1930,12 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   padding: 0.75rem 0.75rem;
   font-weight: 500;
 }
+.p-datatable-thead {
+  height: 50px;
+}
 .p-datatable .p-datatable-thead > tr > th {
   text-align: left;
-  padding: 0.rem 0.75rem;
+  padding: 15px;
   border: 1px solid #e4e4e4;
   border-width: 0 0 1px 0;
   font-weight: 500;
